successfull connection established with firebase, missing elements to fetch from, firebase, modifications need on the shoe class, design improvement waiting to be made for the app ,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="saisir_votre_email">saisir votre email</string>
     <string name="signup">Signup</string>
     <string name="sign_up">sign up</string>
+    <string name="search" />
+    <string name="tunisie_promo">Tunisie Promo</string>
     <string-array name="Role" translatable="true">
         <item>Consumer</item>
         <item>Merchand</item>
